# tokioloop

./: AGENTS.md  Cargo.toml  MEMORY_BANK.md  README.md  implementation_plan.md  pyproject.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: benchmarks.yml  build.yml  lint.yml  release.yml  test.yml
benchmarks/: analyze.py  benchmarks.py  server.py
benchmarks/templates/: pyver.md
memory-bank/: consolidated_learnings.md  productContext.md  progress.md  projectBrief.md  raw_reflection_log.md  systemPatterns.md  techContext.md
plans/: optimization_implementation_plan.md  tokio_tcp_verification_guide.md
rloop/: __init__.py  _compat.py  loop.py  server.py
src/: event_loop.rs  lib.rs  server.rs  ssl.rs  tcp.rs  tokio_event_loop.rs  tokio_handles.rs  tokio_tcp.rs  tokio_udp.rs  utils.rs
tests/: conftest.py  test_handles.py  test_signals.py  test_tokio_import.py
tests/ssl_/: __init__.py  test_ssl_conn.py
tests/tcp/: __init__.py  test_tcp_server.py
tests/udp/: test_udp.py
