[package]
name = "rloop"
version = "0.2.0"
description = "An asyncio event loop implemented in Rust"
authors = ["Alan Justino <alan.justino@yahoo.com.br>"]
license = "BSD-3-Clause"
edition = "2024"

keywords = ["asyncio"]

readme = "README.md"
homepage = "https://github.com/alanjds/tokioloop"
repository = "https://github.com/alanjds/tokioloop"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/LICENSE",
    "/README.md",
    "/src",
    "/rloop",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_rloop"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "=1.0"
env_logger = "0.11"
log = "0.4"
mio = { version = "=1.1", features = ["net", "os-ext", "os-poll"] }
papaya = "=0.2"
pyo3 = { version = "=0.27", features = ["anyhow", "extension-module", "generate-import-lib"] }
rcgen = "=0.13"
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.0"
socket2 = { version = "=0.6", features = ["all"] }
# Tokio dependencies for TokioLoop
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
tokio-util = { version = "0.7", features = ["codec"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"

[build-dependencies]
pyo3-build-config = "=0.27"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
