[project]
name = 'rloop'
authors = [
    { name = 'Alan Justino', email = 'alan.justino@yahoo.com.br' }
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: Free Threading :: 2 - Beta',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python',
    'Programming Language :: Rust',
]

dynamic = [
    'description',
    'keywords',
    'license',
    'readme',
    'version',
]

requires-python = '>=3.11'
dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "requests>=2.32.5",
    "uvloop>=0.22.1",
]

[dependency-groups]
build = [
    'maturin~=1.8',
]
lint = [
    'ruff~=0.11',
]
test = [
    'pytest~=9.0.2',
    'pytest-asyncio~=1.3.0',
    'pytest-timeout~=2.4',
    'requests~=2.32',
    'uvloop',
]

all = [
    { include-group = 'build' },
    { include-group = 'lint' },
    { include-group = 'test' },
]

[project.urls]
Homepage = 'https://github.com/alanjds/tokioloop'
Funding = 'https://github.com/sponsors/alanjds'
Source = 'https://github.com/alanjds/tokioloop'

[build-system]
requires = ['maturin>=1.8.0,<2']
build-backend = 'maturin'

[tool.maturin]
module-name = 'rloop._rloop'
bindings = 'pyo3'

[tool.ruff]
line-length = 120
extend-select = [
    # E and F are enabled by default
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'C90',    # mccabe
    'I',      # isort
    'N',      # pep8-naming
    'Q',      # flake8-quotes
    'RUF100', # ruff (unused noqa)
    'S',      # flake8-bandit
    'W',      # pycodestyle
]
extend-ignore = [
    'B008', # function calls in args defaults are fine
    'B009', # getattr with constants is fine
    'B034', # re.split won't confuse us
    'B904', # rising without from is fine
    'E501', # leave line length to black
    'N818', # leave to us exceptions naming
    'S101', # assert is fine
]
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
mccabe = { max-complexity = 25 }

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ['rloop', 'tests']

[tool.ruff.per-file-ignores]
'rloop/_rloop.pyi' = ['I001']
'tests/**' = ['B018', 'S110', 'S501']

[tool.pytest.ini_options]
asyncio_mode = 'auto'

log_cli = true
log_cli_level = "INFO"

doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
    "NUMBER",
]
addopts = [
    "--continue-on-collection-errors",
    "--ignore-glob=*_BACKUP_*",
    "-v",
    "-rxX",
    "--doctest-modules",
    "--doctest-ignore-import-errors",
]


[tool.uv]
package = false
